# rs-arrow-ipc-stream2x

./: Cargo.toml  README.md  arrow-ipc-stream2x  build.sh  example.sh
src/: lib.rs
