[package]
name = "rs-arrow-ipc-stream2x"
version = "0.1.0"
edition = "2024"

description = "Converts the ipc stream to a sheet."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-arrow-ipc-stream2x"
homepage = "https://github.com/takanoriyanagitani/rs-arrow-ipc-stream2x"
documentation = "https://docs.rs/rs-arrow-ipc-stream2x/latest"
keywords = ["arrow", "ipc", "stream", "xlsx", "sheet"]
category = ["command-line-utilities"]

exclude = [
	"arrow-ipc-stream2x",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[bin]]
name = "arrow-ipc-stream2x"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
]

[dependencies.rust_xlsxwriter]
version = "0"
default-features = true
features = ["chrono"]

[dependencies.half]
version = "2.4"
features = ["use-intrinsics"]

[dependencies.chrono]
version = "0.4"
